basic twitter api

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,7 @@
 	<br><br>
 	<a href="/weather">View your weather</a>
 	<a href="/NYT">View your articles</a>
+	<a href="/twitter">View Twitter</a>
 
 </body>
 </html>
