--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,21 @@
 <html>
 <head>
 	<title>Your Dashboard</title>
+	<!-- <link rel="stylesheet" type="text/css" href="stylesheet.css"> -->
 </head>
 <body>
 	<h1> Welcome to your Dashboard</h1>
-	<br><br>
-	<a href="/weather">View your weather</a>
-	<a href="/NYT">View your articles</a>
-	<a href="/twitter">View Twitter</a>
+	<div class="header">
+		<div class="link"><a href="/weather">Weather</a></div>
+		<div class="link"><a href="/NYT">NYTimes</a></div>
+		<div class="link"><a href="/twitter">Twitter</a></div>
+	</div>
+			
+			<br><br>
+			<a href="/weather">View your weather</a>
+			<a href="/NYT">View your articles</a>
+			<a href="/twitter">View Twitter</a>
+
 
 </body>
 </html>
