--- a/views/twitter_new_search_term.erb
+++ b/views/twitter_new_search_term.erb
@@ -10,5 +10,13 @@
 	<button>Add search term</button>
 </form>
 
+Add people to follow
+<form method="POST" action="/follow/twitter">
+	@<input type="text" name="handle">
+	<button>Follow</button>
+</form>
+
+
+
 </body>
 </html>
