completed all API calls with add, edit, delete, and refresh search options, add tag to posts

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -39,8 +39,20 @@ div {
   	border: solid;
   	padding: (10px, 10px, 10px, 10px);
   }
-p{
+  .twitter{
+    word-wrap: break-word;
+    height: auto;
+    width: 200px;
+    border: solid;
+    display: inline-block;
+    
 
+
+
+
+  }
+p{
+  color: #7766E3;
 }
 
 h3{
