--- a/views/NYT_post.erb
+++ b/views/NYT_post.erb
@@ -6,14 +6,10 @@
 
 <h3><%= article["headline"] %></h3><br>
 
-<img src="<%= article['image'] %>">
+<img src="<%= article['image'] %>"><br>
 <%= article["snippet"] %><br>
 <a href="<%= article['web_url']%>">Read full article</a><br>
 
-<form method="POST" action="/save/NYT">
-	<input type="hidden" name="id" value="<%= article.id %>">
-	<button>Save Article</button>
-</form>
 </p>
 
 
