--- a/views/twitter.erb
+++ b/views/twitter.erb
@@ -1,19 +1,22 @@
 <html>
-<head>
-	<title>Your Twitter Posts</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-<h1>View your twitter posts</h1>
+	<head>
+		<title>Your Twitter Posts</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	</head>
+	<body>
+		<header>
+			<h1>View your twitter posts</h1>
+			<div class="link">
+				<a href="edit/twitter">Twitter preferences</a>
+				<a href="/twitter/add_search">Add Twitter Search</a>
+				<a href="/refresh/twitter">Refresh Twitter Search</a>
+			</div>
+		</header>
 
-<% twitter.each do |a| %>
-<div class="twitter">
-	<b><%= a["screen_name"] %></b>: <p><%= a["full_text"] %><p>
-</div>
-<% end %>
-
-<a href="edit/twitter">Twitter preferences</a>
-<a href="/twitter/add_search">Add Twitter Search</a>
-<a href="/refresh/twitter">Refresh Twitter Search</a>
-</body>
+		<% twitter.each do |a| %>
+			<div class="twitter">
+				<b><%= a["screen_name"] %></b>: <p><%= a["full_text"] %><p>
+			</div>
+		<% end %>
+	</body>
 </html>
